[tool.poetry]
name = "atomic_habits"
version = "0.1.0"
description = ""
authors = ["AlexanderPshenichnyy <ter.anti@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
